# backend/docs/swagger.yaml
@@ -206,22 +206,6 @@ definitions:
     required:
     - name
     type: object
-  models.UpdateUserDto:
-    properties:
-      email:
-        example: email@gmail.com
-        type: string
-      password:
-        example: VeryStrongPassword
-        maxLength: 255
-        minLength: 8
-        type: string
-      username:
-        example: AurisTFG
-        maxLength: 100
-        minLength: 3
-        type: string
-    type: object
   models.UserDto:
     properties:
       email:
@@ -1071,32 +1055,6 @@ paths:
           schema:
             $ref: '#/definitions/responses.UserResponse'
       summary: Get user by ID
-      tags:
-      - users
-    patch:
-      consumes:
-      - application/json
-      description: Update user
-      parameters:
-      - description: User ID
-        in: path
-        name: id
-        required: true
-        type: string
-      - description: User
-        in: body
-        name: user
-        required: true
-        schema:
-          $ref: '#/definitions/models.UpdateUserDto'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/responses.UserResponse'
-      summary: Update user
       tags:
       - users
 swagger: "2.0"
